--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "session-file-store": "^1.5.0",
     "socket.io": "^4.4.0",
     "unzipper": "^0.10.11",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "argon2": "^0.28.3",
+    "sharp": "^0.29.3"
   },
   "nodemonConfig": {
     "watch": [
